src/test/ui/type-alias-impl-trait/cross_inference_pattern_bug_no_type.stderr
error: unconstrained opaque type
  --> $DIR/cross_inference_pattern_bug_no_type.rs:10:14
   |
LL |     type T = impl Copy;  // error: unconstrained opaque type
   |              ^^^^^^^^^
   |
   = note: `T` must be used in combination with a concrete type within the same module

error: aborting due to previous error

